# py-capellambse

./: .buildinfo  .commitlintrc.yml  .editorconfig  .git_archival.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  MAINTAINERS.md  MANIFEST.in  README.md  README.rst  environment.yml  genindex.html  git-conventional-commits.json  git-conventional-commits.json.license  index.html  license_header.txt  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-test-publish.yml  code-qa.yml  commits.yml  docs.yml  lint.yml
_sources/: index.rst.txt
_sources/code/: capellambse.aird.parser.rst.txt  capellambse.aird.rst.txt  capellambse.diagram.rst.txt  capellambse.extensions.metrics.rst.txt  capellambse.extensions.pvmt.rst.txt  capellambse.extensions.reqif.rst.txt  capellambse.extensions.rst.txt  capellambse.extensions.validation.rst.txt  capellambse.filehandler.rst.txt  capellambse.loader.filehandler.rst.txt  capellambse.loader.rst.txt  capellambse.metamodel.information.rst.txt  capellambse.metamodel.pa.rst.txt  capellambse.metamodel.rst.txt  capellambse.model.common.rst.txt  capellambse.model.crosslayer.information.rst.txt  capellambse.model.crosslayer.rst.txt  capellambse.model.layers.rst.txt  capellambse.model.rst.txt  capellambse.pvmt.rst.txt  capellambse.rst.txt  capellambse.svg.rst.txt  modules.rst.txt  tests.rst.txt
_sources/development/: how-to-explore-capella-mm.rst.txt  low-level-api.rst.txt
_sources/examples/: 01 Introduction.ipynb.txt  02 Intro to Physical Architecture API.ipynb.txt  04 Intro to Jinja templating.ipynb.txt  05 Introduction to Libraries.ipynb.txt  06 Introduction to Requirement access and management.ipynb.txt  07 Code Generation.ipynb.txt  08 Property Values.ipynb.txt  09 Context Diagrams.ipynb.txt  10 Declarative Modeling.ipynb.txt  11 Complexity Assessment.ipynb.txt
_sources/start/: audit-events.rst.txt  developing-docs.rst.txt  installation.rst.txt  intro-to-api.rst.txt  migrating-0.6.rst.txt  prerequisites.rst.txt  specifying-models.rst.txt
_sources/tools/: sphinx-extension.rst.txt
_static/: pygments.css
capellambse/: OpenSans-Regular.ttf.license  __init__.py  _diagram_cache.py  _diagram_image_cache.py  _namespaces.py  _native.py  _version.py  auditing.py  cli_helpers.py  decl.py  diagram_cache.py  diagram_image_cache.py  helpers.py  repl.py  sphinx.py
capellambse/aird/: __init__.py  _box_factories.py  _common.py  _edge_factories.py  _semantic.py  _styling.py  _visual.py  capstyle.py  diagram.py  json_enc.py  vector2d.py
capellambse/decl/: __init__.py  __main__.py  _decl.py  diff.py
capellambse/diagram/: __init__.py  _diagram.py  _icons.py  _json_enc.py  _styleclass.py  _vector2d.py  capstyle.py
capellambse/extensions/: __init__.py  filtering.py  pvmt.py  reqif.py
capellambse/filehandler/: __init__.py  abc.py  git.py  git_askpass.py  gitlab_artifacts.py  (+4 more)
ci/: artifactory.pypirc
ci-templates/: README.rst
code/: capellambse.aird.html  capellambse.aird.parser.html  capellambse.diagram.html  capellambse.extensions.html  capellambse.extensions.metrics.html  capellambse.extensions.pvmt.html  capellambse.extensions.reqif.html  capellambse.extensions.validation.html  capellambse.filehandler.html  capellambse.html  capellambse.loader.filehandler.html  capellambse.loader.html  capellambse.metamodel.html  capellambse.metamodel.information.html  capellambse.metamodel.pa.html  capellambse.model.common.html  capellambse.model.crosslayer.html  capellambse.model.crosslayer.information.html  capellambse.model.html  capellambse.model.layers.html  capellambse.pvmt.html  capellambse.svg.html  modules.html  setup.html  tests.html  versioneer.html
development/: developing-docs.html  how-to-explore-capella-mm.html  low-level-api.html  repl.html
docs/: .readthedocs.yaml  Makefile  make.bat
examples/: 01 Introduction.html  01 Introduction.ipynb  01_Introduction.ipynb  01_intro_actor_functions.xlsx  02 Intro to Physical Architecture API.html  02 Intro to Physical Architecture API.ipynb  02_Datavalues.ipynb  03 Data Values.html  03 Data Values.ipynb  04 Intro to Jinja templating.html  04 Intro to Jinja templating.ipynb  05 Introduction to Libraries.html  05 Introduction to Libraries.ipynb  06 Code Generation.ipynb  06 Introduction to Requirement access and management.html  06 Introduction to Requirement access and management.ipynb  07 Code Generation.html  07 Code Generation.ipynb  08 Context Diagrams.ipynb  08 Introduction to PVMT.ipynb  08 Property Values.html  08 Property Values.ipynb  09 Context Diagrams.html  09 Context Diagrams.ipynb  10 Declarative Modeling.html  10 Declarative Modeling.ipynb  11 Complexity Assessment.html  11 Complexity Assessment.ipynb  Introduction to Requirement access and management with ReqIF extension.ipynb
howtos/: howtos.html
scripts/: ecore2py.py  generate_enums.py  mkchangelog.py  verify-examples.sh
src/: exs.rs  lib.rs
start/: audit-events.html  declarative.html  developing-docs.html  envvars.html  how-to-explore-capella-mm.html  installation.html  intro-to-api.html  migrating-0.6.html  prerequisites.html  specifying-models.html
tests/: __init__.py  conftest.py  static_assertions.py  test_aird_filters.py  test_aird_parser.py  test_aird_vector2d.py  test_auditing.py  test_cli_helpers.py  test_decl.py  test_decl_diff.py  test_diagram.py  test_exs.py  test_filehandler_git.py  test_filehandler_memory.py  test_filehandler_zip.py  test_helpers.py  test_layers_pa.py  test_metamodel_common.py  test_metamodel_cs.py  test_metamodel_fa.py  test_metamodel_information.py  test_metrics.py  test_model.py  test_model_creation_deletion.py  test_model_diagram.py  test_model_layers.py  test_model_loading.py  test_model_pvmt.py  test_modelv2.py  test_pvmt.py  test_reqif.py  test_svg.py  test_validation.py  test_vector2d.py  test_xlayer_common.py  test_xlayer_cs.py  test_xlayer_fa.py  test_xlayer_information.py
tools/: sphinx-extension.html
(+375 files in other folders)
