# SPDX-FileCopyrightText: Copyright DB InfraGO AG
# SPDX-License-Identifier: Apache-2.0

[package]
name = "capellambse"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3-py310", "extension-module"] }

[lib]
name = "_compiled"
path = "src/lib.rs"
crate-type = ["cdylib"]
