# SPDX-FileCopyrightText: Copyright DB Netz AG and the capellambse contributors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "capellambse"
description = "Provides access to Capella MBSE projects in Python"
readme = "README.rst"
requires-python = ">=3.9, <3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "DB Netz AG" },
]
keywords = ["arcadia", "capella", "mbse", "model-based systems engineering"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Other/Nonlisted Topic",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "lxml>=4.5.0",
  "markupsafe>=1.1",
  "Pillow>=7.0.0",
  "platformdirs>=1.4.1",
  "svgwrite>=1.3.1",
  "typing_extensions >=4.0.0, <5",
]

[project.urls]
Homepage = "https://github.com/DSD-DBS/py-capellambse"
Documentation = "https://dsd-dbs.github.io/py-capellambse"

[project.optional-dependencies]
docs = [
  "furo",
  "ipython",
  "jinja2",
  "nbsphinx",
  "pyyaml>=6.0",
  "sphinx>=5",
  "sphinx-argparse-cli",
  "tomli; python_version<'3.11'",
]

test = [
  "click",
  "cssutils",
  "pytest",
  "pytest-cov",
  "pyyaml>=6.0",
  "requests-mock",
]

cli = [
  "click",
]

decl = [
  "pyyaml>=6.0",
]

httpfiles = [
  "requests>=2.25.0",
]

png = [
  "cairosvg>=2.5.2",
]

termgraphics = [
  "capellambse[png]",
]

[project.entry-points."capellambse.diagram.formats"]
datauri_svg = "capellambse.model.diagram:SVGDataURIFormat"
html_img = "capellambse.model.diagram:SVGInHTMLIMGFormat"
json = "capellambse.model.diagram:JSONFormat"
json_pretty = "capellambse.model.diagram:PrettyJSONFormat"
png = "capellambse.model.diagram:PNGFormat"
svg = "capellambse.model.diagram:SVGFormat"
svg_confluence = "capellambse.model.diagram:ConfluenceSVGFormat"
svgdiagram = "capellambse.model.diagram:convert_svgdiagram"
termgraphics = "capellambse.model.diagram:TerminalGraphicsFormat"

[project.entry-points."capellambse.filehandler"]
file = "capellambse.filehandler.local:LocalFileHandler"
git = "capellambse.filehandler.git:GitFileHandler"
glart = "capellambse.filehandler.gitlab_artifacts:GitlabArtifactsFiles"
http = "capellambse.filehandler.http:HTTPFileHandler"
https = "capellambse.filehandler.http:HTTPFileHandler"

[project.entry-points."capellambse.model_extensions"]
filtering = "capellambse.extensions.filtering:init"
pvmt = "capellambse.extensions.pvmt:init"
reqif = "capellambse.extensions.reqif:init"

[tool.black]
line-length = 79

[tool.docformatter]
wrap-descriptions = 72
wrap-summaries = 79

[tool.isort]
profile = 'black'
line_length = 79

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
# Untyped third party libraries
module = [
  "cairosvg.*",
  "cssutils.*",
  "lxml.*",
  "PIL.*",
  "requests_mock.*",
  "svgwrite.*",
]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "numpy"
add-select = [
  "D212",  # Multi-line docstring summary should start at the first line
  "D402",  # First line should not be the function’s “signature”
  "D417",  # Missing argument descriptions in the docstring
]
add-ignore = [
  "D201",  # No blank lines allowed before function docstring  # auto-formatting
  "D202",  # No blank lines allowed after function docstring  # auto-formatting
  "D203",  # 1 blank line required before class docstring  # auto-formatting
  "D204",  # 1 blank line required after class docstring  # auto-formatting
  "D211",  # No blank lines allowed before class docstring  # auto-formatting
  "D213",  # Multi-line docstring summary should start at the second line
]

[tool.pylint.master]
extension-pkg-allow-list = [
  "lxml.builder",
  "lxml.etree",
]
max-line-length = 79

[tool.pylint.messages_control]
disable = [
  "broad-except",
  "cyclic-import",
  "global-statement",
  "import-outside-toplevel",
  "invalid-name",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-else-break",
  "no-else-continue",
  "no-else-raise",
  "no-else-return",
  "protected-access",
  "redefined-builtin",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-boolean-expressions",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",

  # Auto-formatting
  "bad-indentation",
  "inconsistent-quotes",
  "missing-final-newline",
  "mixed-line-endings",
  "multiple-imports",
  "multiple-statements",
  "trailing-newlines",
  "trailing-whitespace",
  "unexpected-line-ending-format",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",

  # Handled by mypy
  "arguments-differ",
  "assignment-from-no-return",
  "import-error",
  "missing-kwoa",
  "no-member",
  "no-value-for-parameter",
  "redundant-keyword-arg",
  "signature-differs",
  "syntax-error",
  "too-many-function-args",
  "unbalanced-tuple-unpacking",
  "undefined-variable",
  "unexpected-keyword-arg",
]
enable = [
  "c-extension-no-member",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "useless-suppression",
]

[tool.pytest.ini_options]
addopts = """
  --import-mode=importlib
  --strict-config
  --strict-markers
"""
testpaths = ["tests"]
xfail_strict = true

[tool.setuptools]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]
"capellambse" = ["OpenSans-Regular.ttf"]

[tool.setuptools.packages.find]
exclude = ["LICENSES"]

[tool.setuptools_scm]
# This section must exist for setuptools_scm to work
local_scheme = "no-local-version"
