# Copyright 2021 DB Netz AG
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = capellambse
url = https://github.com/DSD-DBS/py-capellambse
author = DB Netz AG
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
license = Apache
description = Provides access to Capella MBSE projects in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = arcadia, capella, mbse, model-based systems engineering
platforms = any

[options]
zip_safe = false
install_requires =
    lxml>=4.5.0
    markupsafe>=1.1
    Pillow>=7.0.0
    svgwrite>=1.3.1
    platformdirs
python_requires = >=3.8
use_2to3 = false
packages = find:

[options.entry_points]
capellambse.diagram.formats =
    datauri_svg = capellambse.model.diagram:SVGDataURIFormat
    html_img = capellambse.model.diagram:SVGInHTMLIMGFormat
    json = capellambse.model.diagram:JSONFormat
    json_pretty = capellambse.model.diagram:PrettyJSONFormat
    svg = capellambse.model.diagram:SVGFormat
    svg_confluence = capellambse.model.diagram:ConfluenceSVGFormat
    png = capellambse.model.diagram:PNGFormat
    svgdiagram = capellambse.model.diagram:convert_svgdiagram
capellambse.filehandler =
    git = capellambse.loader.filehandler.gitfilehandler:GitFileHandler
    file = capellambse.loader.filehandler.localfilehandler:LocalFileHandler
    http = capellambse.loader.filehandler.http:HTTPFileHandler
    https = capellambse.loader.filehandler.http:HTTPFileHandler
capellambse.model_extensions =
    pvmt = capellambse.extensions.pvmt:init
    reqif = capellambse.extensions.reqif:init

[options.extras_require]
docs = sphinx; sphinx-rtd-theme; jinja2
test =
    coverage>=5.1
    cssutils
    mypy
    pylint
    pytest
    pytest-cov
    types-docutils
    types-requests

# The HTTPFileHandler for ``http(s)://`` URLs
httpfiles = requests>=2.25.0

png = cairosvg>=2.5.2

[options.package_data]
capellambse =
    OpenSans-Regular.ttf
    py.typed

[options.packages.find]
include = capellambse, capellambse.*

[versioneer]
VCS = git
style = pep440
versionfile_source = capellambse/_version.py
versionfile_build = capellambse/_version.py
tag_prefix = v
parentdir_prefix = python-capella-mbse-v

[build_sphinx]
source-dir = docs/source
build-dir = public
